[metadata]
name = CBE30338
version = 0.0.2
license = MIT
url = https://github.com/jckantor/CBE30338/
description = Python code base for CBE30338 Chemical Process Control
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Kantor
author_email = Kantor.1@nd.edu
classifiers=
   Development Status :: 4 - Beta
   Framework :: Jupyter
   Intended Audience :: Education
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   cvxpy

[options.packages.find]
where=src