[metadata]
name = gcet059
version = 0.0.2
license = MIT
url = https://github.com/profpaulonascimento/gcet059/
description = Python code base for GCET059 Cálculo Numérico
long_description = file: README.md
long_description_content_type = text/markdown
author = profpaulonascimento
author_email = nascimento.p@ufrb.edu.br
classifiers=
   Development Status :: 4 - Beta
   Framework :: Jupyter
   Intended Audience :: Education
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   cvxpy

[options.packages.find]
where=src
